# python-typed-template

./: .gitignore  .pre-commit-config.yaml  .taplo.toml  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  cookiecutter-config.yaml  cookiecutter.json
.github/: ci.yml  dependabot.yml
.github/workflows/: ci.yml  pre-commit-update.yml  snapshot.yml
hooks/: pre_gen_project.py
snapshot/cookie/: .pre-commit-config.yaml  pyproject.toml
snapshots/: default.yaml  setuptools-scm.yaml
snapshots/default/: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile-common.mk  README.md  pyproject.toml
snapshots/default/.github/workflows/: ci.yml
snapshots/setuptools-scm/: Makefile-common.mk  README.md  pyproject.toml
snapshots/setuptools-scm/mypackage/: main.py
{{cookiecutter.repo_name}}/: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  Makefile  Makefile-common.mk  README.md  package.json  pyproject.toml  pyrightconfig.json  setup.py
