[project]
name = "{{cookiecutter.distribution_name}}"
description = "{{cookiecutter.description}}"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "autoflake~=1.4",
    "black~=22.3",
    "build~=0.7",
    "isort~=5.9",
    "flake8~=5.0",
    "flake8-annotations~=2.7",
    "pre-commit~=2.15",
    "pytest~=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

# use PyCharm default line length of 120

[build-system]
requires = ["setuptools~=65.5", "wheel~=0.37"]

[tool.autoflake]
in-place = true
recursive = true
remove-all-unused-imports = true
ignore-init-module-imports = true

[tool.black]
line-length = 120

[tool.isort]
# use black compatible settings
line_length = 120
multi_line_output = 3
include_trailing_comma = true
skip = [ ".tox", "dist", "node_modules", ".venv", "build", ".git", "typings"]
