[project]
name = "{{cookiecutter.distribution_name}}"
description = "{{cookiecutter.description}}"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "black~=22.3",
    "build~=0.7",
    "pre-commit~=2.15",
    "pytest~=7.0",
    "ruff~=0.0.132"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

# use PyCharm default line length of 120

[build-system]
requires = ["setuptools~=65.5", "wheel~=0.37"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

# rules to enable/ignore
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # type annotations
    "ANN",
    # pep8-naming
    "N",
    # bugbear
    "B",
    # isort
    "I"
]
ignore = [
    # allow untyped self and cls args, and no return type from dunder methods
    "ANN101",
    "ANN102",
    "ANN204",
    # allow == True because pandas dataframes overload equality
    "E712",
]
# first-party imports for sorting
src = ["."]

fix = true

# imports in __init__.py don't need to be used in __init__.py
# test functions don't need return types
per-file-ignores = { "__init__.py" = [
    "F401",
], "tests/*" = [
    "ANN201",
    "ANN202",
] }

[tool.ruff.flake8-annotations]
# allow *args: Any, **kwargs: Any
allow-star-arg-any = true
